# AERO

./: .env.example  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 55ea28592a60_initial_tables.py
backend/app/: config.py  database.py  lightrag_launcher.py  main.py
backend/app/detection/: __init__.py  base.py  ml_detector.py  threshold.py
backend/app/etl/: base.py
backend/app/mcp/: server.py  tools.py
backend/app/models/: __init__.py  ahu.py  anomaly.py  base.py  boiler.py  building.py  chiller.py  cooling_tower.py  energy_meter.py  energy_record.py  equipment.py  pump.py  region.py  vav.py  weather.py
backend/app/rag/: __init__.py  document_processor.py  rag_service.py
backend/app/routers/: anomaly.py  buildings.py  data_import.py  energy.py  energy_meter.py  equipment.py  export.py  hvac_data.py  mcp_manage.py  qa.py  regions.py  statistics.py  weather.py
backend/app/schemas/: __init__.py  ahu.py  anomaly.py  boiler.py  building.py  chiller.py  cooling_tower.py  energy.py  energy_meter.py  equipment.py  knowledge.py  pump.py  query.py  region.py  report.py  statistics.py  vav.py  weather.py
backend/app/services/: anomaly_service.py  building_service.py  device_simulator.py  energy_meter_service.py  energy_service.py  equipment_service.py  export_service.py  hvac_data_service.py  import_service.py  qa_service.py  region_service.py  statistics_service.py  weather_service.py
backend/app/utils/: cop.py
backend/scripts/: generate_data.py  seed_db.py
backend/sql/: manual_tables.sql
(+93 files in other folders)
