[project]
name = "aero-backend"
version = "0.1.0"
description = "AERO - Building Energy Intelligent Management System"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "lightrag-hku[api]>=1.4.9",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0",
    "ollama>=0.6.1",
    "pyjwt>=2.11.0",
    "fastmcp>=2.12.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
